hphp/hack/test/typecheck/shape_usage_with_optional_field.php.exp
File "shape_usage_with_optional_field.php", line 3, characters 1-27:
Toplevel statements are not allowed. Use `__EntryPoint` attribute instead (Parsing[1002])
File "shape_usage_with_optional_field.php", line 4, characters 3-3:
Shape field name must be a nonempty single-quoted string or a class constant (Parsing[1002])
File "shape_usage_with_optional_field.php", line 4, characters 4-4:
An expression is expected here. (Parsing[1002])
